# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-07 01:47:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-36

    Summary:
      Added first Listtest
    Revision:
      missingh--head--1.0--patch-36


    new files:
     testsrc/Listtest.hs

    modified files:
     ChangeLog testsrc/Tests.hs


2004-10-07 01:26:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-35

    Summary:
      Added basic test infrastructure
    Revision:
      missingh--head--1.0--patch-35


    new files:
     testsrc/.arch-ids/=id testsrc/Tests.hs testsrc/runtests.hs

    modified files:
     ChangeLog Makefile debian/control

    new directories:
     testsrc testsrc/.arch-ids


2004-10-07 01:04:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-34

    Summary:
      Fixed traditional making
    Revision:
      missingh--head--1.0--patch-34


    modified files:
     ChangeLog Makefile


2004-10-07 00:55:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-33

    Summary:
      Renamed modules
    Revision:
      missingh--head--1.0--patch-33


    modified files:
     ChangeLog README Setup.description libsrc/MissingH/IO.hs
     libsrc/MissingH/List.hs libsrc/MissingH/Str.hs

    renamed files:
     libsrc/MissingH/IOutil.hs
       ==> libsrc/MissingH/IO.hs
     libsrc/MissingH/Listutil.hs
       ==> libsrc/MissingH/List.hs
     libsrc/MissingH/Strutil.hs
       ==> libsrc/MissingH/Str.hs


2004-10-06 03:17:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-32

    Summary:
      Added INSTALL, README files
    Revision:
      missingh--head--1.0--patch-32


    new files:
     INSTALL README

    modified files:
     ChangeLog debian/docs


2004-10-05 22:01:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-31

    Summary:
      Added ChangeLog
    Revision:
      missingh--head--1.0--patch-31


    new files:
     ChangeLog

    modified files:
     debian/rules

